--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google-cloud/translate": "^7.0.0",
+    "@google-cloud/vision": "^3.1.0",
     "cra-template-typescript": "1.2.0",
+    "jimp": "^0.22.10",
     "openai": "^4.83.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -41,6 +44,7 @@
     "@testing-library/react": "^16.2.0",
     "@types/chrome": "^0.0.303",
     "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.1",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "copy-webpack-plugin": "^12.0.2",
